quoting-CypressTK1/force-app/main/default/objects/Estimate__c/fields/IsSyncChangesToQuote__c.field-meta.xml
<CustomField>
    <fullName>IsSyncChangesToQuote__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync Changes to Quote</label>
    <type>Checkbox</type>
</CustomField>