quoting-CypressTK1/force-app/main/default/objects/Estimate__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Estimate</relationshipLabel>
    <relationshipName>Estimate</relationshipName>
    <type>Lookup</type>
</CustomField>