quoting-CypressTK1/force-app/main/default/objects/Estimate__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.ProductId__c</field>
            <operation>equals</operation>
            <valueField>Product__c.AssociatedProductId__c</valueField>
        </filterItems>
        <filterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service</value>
        </filterItems>
        <filterItems>
            <field>$Source.ProductId__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Estimates</relationshipLabel>
    <relationshipName>ServiceEstimates</relationshipName>
    <type>Lookup</type>
</CustomField>