quoting-CypressTK1/force-app/main/default/objects/Estimate__c/fields/TotalEstimatedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedAmount__c</fullName>
    <formula>SummaryId__r.TotalEstimatedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>