quoting-CypressTK1/force-app/main/default/objects/Estimate__c/fields/TotalEstimatedCost__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedCost__c</fullName>
    <formula>SummaryId__r.TotalEstimatedCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>